ingress/ingress-master.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ghub-beta
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx-f5
  rules:
  - host: ghub-beta.finanzero.com.br
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-hub-beta
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx-f5
  rules:
  - host: hub-beta.finanzero.com.br
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-api-beta
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx-f5
  rules:
  - host: api-beta.finanzero.com.br
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-hub-beta-finan0
  namespace: default
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx-f5
  rules:
  - host: hub.beta.finan0.com.br
